--- a/css/lc_lightbox.css
+++ b/css/lc_lightbox.css
@@ -926,7 +926,7 @@
 /* text over */
 .lcl_force_txt_over #lcl_txt,
 .lcl_txt_over #lcl_txt {
-	background: rgba(255, 255, 255, 0.9);
+	backdrop-filter: blur(5px);
 	background-clip: padding-box !important;
     border: 15px solid transparent;
 	border-radius: 0 17px 17px 0;
