--- a/css/lc_lightbox.css
+++ b/css/lc_lightbox.css
@@ -505,7 +505,6 @@
 #lcl_corner_close:before,
 .lcl_postered_video:not(.lcl_poster_clicked):before {
 	font-family: 'lc_lightbox' !important;
-	speak: none;
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
@@ -535,7 +534,7 @@
 	bottom: -1px;
     z-index: 5;
 	border-radius: 3px;
-	opcity: 0;
+	opacity: 0;
 	background: #6f6f6f;
 	
 	-webkit-transition: all .2s ease;
@@ -928,11 +927,12 @@
 .lcl_txt_over #lcl_txt {
 	backdrop-filter: blur(5px);
 	background-clip: padding-box !important;
-    border: 15px solid transparent;
-	border-radius: 0 17px 17px 0;
+    border: 1px solid #fafafa;
+	border-radius: 17px 17px 17px 0;
 	max-height: calc(100% - 42px);
 	padding: 13px 22px;
 	overflow: auto;
+	/* width: 80%; */
 	bottom: 0;
 }
 .lcl_fullscreen_mode.lcl_force_txt_over #lcl_txt,
@@ -1444,7 +1444,7 @@
 }
 .lcl_loading_videojs #lcl_progressbar,
 .lcl_loading_iframe #lcl_progressbar {
-	opacity: 0; !important;	
+	opacity: 0 !important;	
 	
 	-webkit-transition-duration: 0s;
 	transition-duration: 0s;
