--- a/skins/minimal.css
+++ b/skins/minimal.css
@@ -160,19 +160,22 @@
 	color: #ddd;
 }
 .lcl_minimal #lcl_title {
-	color: #eee;	
+	color: lavender;
+	font-family: Georgia, 'Times New Roman', Times, serif;		
 }
 .lcl_minimal #lcl_author {
-	color: #bfbfbf;	
+	color: #bfbfbf;
+
 }
 .lcl_minimal .lcl_txt_border {
-	border-bottom: 1px dotted #666 !important;	
+	backdrop-filter: blur(5px);
 }
 
 /* text over */
 .lcl_minimal.lcl_force_txt_over #lcl_txt,
 .lcl_minimal.lcl_txt_over #lcl_txt {
-	background: rgba(26, 26, 26, 0.9);
+	backdrop-filter: blur(5px);
+	border-radius: 2px solid red;
 }
 .lcl_minimal.lcl_force_txt_over #lcl_txt:before,
 .lcl_minimal.lcl_txt_over #lcl_txt:before {
